# gamepie

./: Cargo.toml  LICENSE  README.md  TODO.md
case/: pizero_case.scad
gamepie-app/: Cargo.toml
gamepie-app/src/: core.rs  gamepie.rs  gpio.rs  lib.rs
gamepie-app/src/proxy/: audio.rs  functions.rs  libretro.rs  mod.rs
gamepie-audio/: Cargo.toml
gamepie-audio/src/: lib.rs
gamepie-controller/: Cargo.toml
gamepie-controller/src/: controller.rs  lib.rs  mapping.rs
gamepie-core/: Cargo.toml  build.rs
gamepie-core/cshim/: cshim.c  cshim.h
gamepie-core/src/: error.rs  lib.rs  log.rs  portable.rs  problem.rs  types.rs
gamepie-core/src/commands/: audio.rs  mod.rs  screen.rs
gamepie-libretro/: Cargo.toml
gamepie-libretro/src/: callbacks.rs  lib.rs  proxy.rs  vars.rs
gamepie-libretrobind/: Cargo.toml  build.rs
gamepie-libretrobind/src/: bind.rs  enums.rs  functions.rs  lib.rs  types.rs  utils.rs
gamepie-screen/: Cargo.toml
gamepie-screen/src/: framebuffer.rs  lib.rs  menu.rs  overlay.rs  screen.rs  sprites.rs
gamepie-screenbind/: Cargo.toml  build.rs
gamepie-screenbind/screen/: CMakeLists.txt  cmake  display.h  dma.cpp  fbcp-ili9341.cpp  fbcp-ili9341.h  gpu.cpp  gpu.h  log.h  mailbox.cpp  mem_alloc.cpp  spi.cpp  st7735r.cpp  statistics.cpp  statistics.h  tick.h  util.h
gamepie-screenbind/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
