[package]
name = "gamepie-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.73"

[dependencies]
embedded-graphics = "0.7.1"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"