[package]
name = "gamepie-libretro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
colored = "2.0"
num = "0.4"
embedded-graphics = "0.7.1"

gamepie-core = { path = "../gamepie-core" }
gamepie-controller = { path = "../gamepie-controller" }
gamepie-screen = { path = "../gamepie-screen" }
gamepie-libretrobind = { path = "../gamepie-libretrobind" }